# morpholayers

./: .gitignore  README.md  __init__.py  constraints.py  initializers.py  layers.py  layers_old.py  mkdocs.yml  pyproject.toml  regularizers.py
.github/workflows/: publish.yml  test.yml
docs/: index.md
examples/: LinkstoTutorial.md
src/morpholayers/: __init__.py  constraints.py  initializers.py  layers.py
tests/: Tutorial0_Deep_Learning_in_15_minutes.ipynb  Tutorial1_simple_operators_morpholayers.ipynb  Tutorial2_learn_morphological_operators.ipynb  Tutorial3_Learning_morphological_layer_others.ipynb  Tutorial4_Improving_MaxPooling_Layer_using_Dilation.ipynb  Tutorial5_Learning_Additive_Shift_Equivariant_Operators.ipynb  Tutorial6_Learning_Scale_Equivariant_Operators.ipynb
